# teleporter

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: catalog.rs  main.rs
src/adapters/: claude.rs  codex.rs  common.rs  grok.rs  mod.rs
src/brand/: mod.rs
src/handoff/: mod.rs
src/launch/: mod.rs
src/model/: mod.rs
src/teleport/: mod.rs
src/tui/: mod.rs
tests/fixtures/: codex-rollout.jsonl
