[package]
name = "agent-teleporter"
version = "0.1.0"
edition = "2021"
description = "Teleport coding-agent conversations between Codex, Grok, and Claude Code"
license = "MIT"
readme = "README.md"
repository = "https://github.com/han-isn/teleporter"
homepage = "https://github.com/han-isn/teleporter"
documentation = "https://github.com/han-isn/teleporter"
keywords = ["cli", "codex", "grok", "claude", "handoff"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".teleporter/", "target/"]

[[bin]]
name = "teleporter"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.2", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.30.2"
regex = "1.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
walkdir = "2.5.0"
which = "8.0.5"
